--- a/public/blog.html
+++ b/public/blog.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>F2F BLOG</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/public/css/blog.css" /> 
+
     </head>
     <body>
         <nav class="navbar bg-body-tertiary">
@@ -12,6 +14,18 @@
               <a class="navbar-brand" href="#">
                 <img src="/public/images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
               </a>
+            <ul class="nav-links">
+                <li><a href="https://www.Google.com/"> Blog </a></li>
+                <li><a href="https://www.Google.com/"> About </a></li>
+                <li><a href="https://www.Google.com/"> Services </a></li>
+                <li><a href="https://www.Google.com/"> Resources </a></li>
+                <li><a href="https://www.Google.com/"> Contact </a></li>
+                <li><a href="https://www.Google.com/"> Sign-In </a></li>
+            </ul>
+            <div class="profile-img">
+                <img src="/public/images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
+            </div>
+            
             </div>
           </nav>
 </body>
