--- a/public/blog.html
+++ b/public/blog.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>F2F BLOG</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/public/css/blog.css" /> 
 
     </head>
@@ -16,12 +19,12 @@
               </a>
         
             <ul class="nav-links">
-                <li><a href="https://www.Google.com/"> Blog </a></li>
+                <li><a href="/public/crud.html"> Blog </a></li>
                 <li><a href="https://www.Google.com/"> About </a></li>
                 <li><a href="https://www.Google.com/"> Services </a></li>
                 <li><a href="https://www.Google.com/"> Resources </a></li>
                 <li><a href="https://www.Google.com/"> Contact </a></li>
-                <li><a href="https://www.Google.com/"> Sign-In </a></li>
+                <li><a href="https://www.Google.com/"> Logout </a></li>
             </ul>
             
             <div class="profile-img">
