add html files for about page, services page, contact page, made a folder to hold html files

--- a/public/html/crud.html
+++ b/public/html/crud.html
@@ -28,15 +28,38 @@
 
         </div>
     </nav>
+    <br>
+    <div class="user-header">
+        <h1>Welcome user name... </h1>
+    </div>
     <div class="manage-category">
         <ul class="nav-links">
+            <li><a href="/public/html/blog.html"><i class="bi bi-house-fill"></i>Blog</a></li>
             <li><a href="https://www.Google.com/"><i class="bi bi-plus-square-fill"></i> Add post </a></li>
             <li><a href="https://www.Google.com/"><i class="bi bi-pencil-fill"></i> Edit post </a></li>
             <li><a href="https://www.Google.com/"><i class="bi bi-person-plus-fill"></i> Add user </a></li>
             <li><a href="https://www.Google.com/"><i class="bi bi-clock-history"></i> Post history </a></li>
-            <li><a href="https://www.Google.com/"><i class="bi bi-node-plus"></i> Add category </a></li>
+            <li><a href=""><i class="bi bi-key"></i>Admin Login</a></li>
             <li><a href="https://www.Google.com/"><i class="bi bi-door-closed"></i> Logout </a></li>
         </ul>
+        <div class="user-action">
+            <!--this will be where content shows to CRUD-->
+        </div>
+        
+    </div>
+    <div class="footer-container">
+        <div class="social">
+            <a href=""></a><i class="bi bi-youtube"></i>
+            <a href=""></a><i class="bi bi-github"></i>
+        </div>
+        <div class="footerNav">
+            <ul>
+                <li><a href="https://www.Google.com/"> About </a></li>
+                <li><a href="https://www.Google.com/"> Services </a></li>
+                <li><a href="https://www.Google.com/"> Resources </a></li>
+                <li><a href="https://www.Google.com/"> Contact </a></li>
+            </ul>
+        </div>
     </div>
 </body>
 
