--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -19,7 +19,7 @@
               </a>
         
             <ul class="nav-links">
-                <li><a href="/public/crud.html"> Blog </a></li>
+                <li><a href="/public/html/blog.html"> Blog </a></li>
                 <li><a href="https://www.Google.com/"> About </a></li>
                 <li><a href="https://www.Google.com/"> Services </a></li>
                 <li><a href="https://www.Google.com/"> Resources </a></li>
