add footer to blog and crud html page

--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -33,5 +33,20 @@
             
             </div>
           </nav>
+          <div class="footer-container">
+            <div class="social">
+                <a href=""></a><i class="bi bi-youtube"></i>
+                <a href=""></a><i class="bi bi-github"></i>
+            </div>
+            <div class="footerNav">
+                <ul>
+                    <li><a href="https://www.Google.com/"> About </a></li>
+                    <li><a href="https://www.Google.com/"> Services </a></li>
+                    <li><a href="https://www.Google.com/"> Resources </a></li>
+                    <li><a href="https://www.Google.com/"> Contact </a></li>
+                    <li><a href=""> Our Team</a></li>
+                </ul>
+            </div>
+        </div>
 </body>
 </html>
