--- a/public/html/crud.html
+++ b/public/html/crud.html
@@ -47,6 +47,7 @@
         </div>
         
     </div>
+    <footer>
     <div class="footer-container">
         <div class="social">
             <a href=""></a><i class="bi bi-youtube"></i>
@@ -58,9 +59,14 @@
                 <li><a href="https://www.Google.com/"> Services </a></li>
                 <li><a href="https://www.Google.com/"> Resources </a></li>
                 <li><a href="https://www.Google.com/"> Contact </a></li>
+                <li><a href=""> Our Team</a></li>
             </ul>
         </div>
     </div>
+    <div class="footer-bottom">
+        <p>Copyright &copy;2023; Designed by <span class="designer">F2FSquad</span></p>
+    </div>
+</footer>
 </body>
 
 </html>
