add footer to blog html and crud html page, team can add footer to their page and nav bar with logo

--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -33,6 +33,7 @@
             
             </div>
           </nav>
+        <footer>
           <div class="footer-container">
             <div class="social">
                 <a href=""></a><i class="bi bi-youtube"></i>
@@ -48,5 +49,9 @@
                 </ul>
             </div>
         </div>
+        <div class="footer-bottom">
+          <p>Copyright &copy;2023; Designed by <span class="designer">F2FSquad</span></p>
+      </div>
+    </footer>
 </body>
 </html>
