--- a/public/html/crud.html
+++ b/public/html/crud.html
@@ -50,8 +50,8 @@
     <footer>
     <div class="footer-container">
         <div class="social">
-            <a href=""></a><i class="bi bi-youtube"></i>
-            <a href=""></a><i class="bi bi-github"></i>
+            <a href=""></a><i class="bi bi-youtube youtube"></i>
+            <a href=""></a><i class="bi bi-github github"></i>
         </div>
         <div class="footerNav">
             <ul>
