add links to pages to click to link of another page of app

--- a/public/html/crud.html
+++ b/public/html/crud.html
@@ -39,8 +39,8 @@
             <li><a href="https://www.Google.com/"><i class="bi bi-pencil-fill"></i> Edit post </a></li>
             <li><a href="https://www.Google.com/"><i class="bi bi-person-plus-fill"></i> Add user </a></li>
             <li><a href="https://www.Google.com/"><i class="bi bi-clock-history"></i> Post history </a></li>
-            <li><a href=""><i class="bi bi-key"></i>Admin Login</a></li>
-            <li><a href="https://www.Google.com/"><i class="bi bi-door-closed"></i> Logout </a></li>
+            <li><a href=""><i class="bi bi-key"></i>Admin Login</a></li> <!--admin login page will prompt user and pass and javascript will show table of users etc.-->
+            <li><a href=""><i class="bi bi-door-closed"></i> Logout </a></li> <!--login page-->
         </ul>
         <div class="user-action">
             <!--this will be where content shows to CRUD-->
@@ -55,11 +55,11 @@
         </div>
         <div class="footerNav">
             <ul>
-                <li><a href="https://www.Google.com/"> About </a></li>
-                <li><a href="https://www.Google.com/"> Services </a></li>
-                <li><a href="https://www.Google.com/"> Resources </a></li>
-                <li><a href="https://www.Google.com/"> Contact </a></li>
-                <li><a href=""> Our Team</a></li>
+                <li><a href="/public/html/about.html"> About </a></li>
+                <li><a href=""> Services </a></li>
+                <li><a href=""> Resources </a></li> <!--resource page-->
+                <li><a href="/public/html/contact.html"> Contact </a></li>
+                <li><a href="/public/html/teambio.html"> Our Team</a></li>
             </ul>
         </div>
     </div>
