--- a/public/html/teambio.html
+++ b/public/html/teambio.html
@@ -36,8 +36,7 @@
           </nav>
           <br>
 
-          <div class="contact-section">
-            <h1>Contact</h1>
+          <div class="TeamMember-shortBio">
 
           </div>
 
@@ -50,8 +49,8 @@
             <div class="footerNav">
                 <ul>
                     <li><a href="/public/html/about.html"> About </a></li>
-                    <li><a href=""> Services </a></li>
-                    <li><a href=""> Resources </a></li> <!--resource page-->
+                    <li><a href="https://www.Google.com/"> Services </a></li>
+                    <li><a href="https://www.Google.com/"> Resources </a></li>
                     <li><a href="/public/html/contact.html"> Contact </a></li>
                     <li><a href="/public/html/teambio.html"> Our Team</a></li>
                 </ul>
