--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -21,11 +21,11 @@
         
             <ul class="nav-links">
                 <li><a href="/public/html/blog.html"> Blog </a></li>
-                <li><a href="https://www.Google.com/"> About </a></li>
+                <li><a href="/public/html/about.html"> About </a></li>
                 <li><a href="https://www.Google.com/"> Services </a></li>
-                <li><a href="https://www.Google.com/"> Resources </a></li>
-                <li><a href="https://www.Google.com/"> Contact </a></li>
-                <li><a href="https://www.Google.com/"> Logout </a></li>
+                <li><a href=""> Resources </a></li> <!--resource page-->
+                <li><a href="/public/html/contact.html"> Contact </a></li>
+                <li><a href=""> Logout </a></li> <!--Login page-->
             </ul>
             
             <div class="profile-img">
