add notes for team throughout html pages

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -38,6 +38,7 @@
 
           <div class="about-app">
             <h1>About page</h1>
+            <p>Details of app, Our mission statement...CODERS ARE STRESS FREE!</p>
 
           </div>
 
