--- a/public/html/crud.html
+++ b/public/html/crud.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css" href="/public/css/crud.css" />
+    <link rel="stylesheet" type="text/css" href="../css/crud.css" />
 
 </head>
 
@@ -19,11 +19,11 @@
     <nav class="navbar bg-body-tertiary">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="/public/images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
+                <img src="../images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
             </a>
 
             <div class="profile-img">
-                <img src="/public/images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
+                <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
             </div>
 
         </div>
