--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -22,8 +22,8 @@
         
             <ul class="nav-links">
                 <li><a href="/public/html/blog.html"> Blog </a></li>
+                <li><a href="/public/html/crud.html"> POST </a></li>
                 <li><a href="/public/html/about.html"> About </a></li>
-                <li><a href="https://www.Google.com/"> Services </a></li>
                 <li><a href=""> Resources </a></li> <!--resource page-->
                 <li><a href="/public/html/contact.html"> Contact </a></li>
                 <li><a href=""> Logout </a></li> <!--Login page-->
