--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -23,7 +23,7 @@
             <ul class="nav-links">
                 <li><a href="/public/html/blog.html"> Blog </a></li>
                 <li><a href="https://www.Google.com/"> About </a></li>
-                <li><a href="https://www.Google.com/"> Services </a></li>
+                <li><a href="/public/html/crud.html"> POST </a></li>
                 <li><a href="https://www.Google.com/"> Resources </a></li>
                 <li><a href="https://www.Google.com/"> Contact </a></li>
                 <li><a href="https://www.Google.com/"> Logout </a></li>
