added resources html and appropriate links for other html pages

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -26,7 +26,7 @@
                 <li><a href="/public/html/blog.html"> Blog </a></li>
                 <li><a href="https://www.Google.com/"> About </a></li>
                 <li><a href="/public/html/crud.html"> POST </a></li>
-                <li><a href="https://www.Google.com/"> Resources </a></li>
+                <li><a href="/public/html/resources.html"> Resources </a></li>
                 <li><a href="https://www.Google.com/"> Contact </a></li>
                 <li><a href="https://www.Google.com/"> Logout </a></li>
             </ul>
@@ -55,7 +55,7 @@
                 <ul>
                     <li><a href="https://www.Google.com/"> About </a></li>
                     <li><a href="https://www.Google.com/"> Services </a></li>
-                    <li><a href="https://www.Google.com/"> Resources </a></li>
+                    <li><a href="/public/html/resources.html"> Resources </a></li>
                     <li><a href="https://www.Google.com/"> Contact </a></li>
                     <li><a href=""> Our Team</a></li>
                 </ul>
