--- a/public/html/crud.html
+++ b/public/html/crud.html
@@ -58,7 +58,7 @@
             <ul>
                 <li><a href="/public/html/about.html"> About </a></li>
                 <li><a href=""> Services </a></li>
-                <li><a href=""> Resources </a></li> <!--resource page-->
+                <li><a href="/public/html/resources.html"> Resources </a></li> 
                 <li><a href="/public/html/contact.html"> Contact </a></li>
                 <li><a href="/public/html/teambio.html"> Our Team</a></li>
             </ul>
