--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -25,7 +25,7 @@
                 <li><a href="/public/html/blog.html"> Blog </a></li>
                 <li><a href="https://www.Google.com/"> About </a></li>
                 <li><a href="/public/html/crud.html"> POST </a></li>
-                <li><a href="https://www.Google.com/"> Resources </a></li>
+                <li><a href="/public/html/resources.html"> Resources </a></li>
                 <li><a href="https://www.Google.com/"> Contact </a></li>
                 <li><a href="https://www.Google.com/"> Logout </a></li>
             </ul>
@@ -54,7 +54,7 @@
                 <ul>
                     <li><a href="/public/html/about.html"> About </a></li>
                     <li><a href=""> Services </a></li>
-                    <li><a href=""> Resources </a></li> <!--resource page-->
+                    <li><a href="/public/html/resources.html"> Resources </a></li> 
                     <li><a href="/public/html/contact.html"> Contact </a></li>
                     <li><a href="/public/html/teambio.html"> Our Team</a></li>
                 </ul>
