add links to login page/log out page

--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -27,7 +27,7 @@
                 <li><a href="/public/html/about.html"> About </a></li>
                 <li><a href="/public/html/resources.html"> Resources </a></li> 
                 <li><a href="/public/html/contact.html"> Contact </a></li>
-                <li><a href=""> Logout </a></li> <!--Login page-->
+                <li><a href="/public/html/login.html"> Logout </a></li> <!--Login page-->
             </ul>
             
             <div class="profile-img">
