--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -23,11 +23,11 @@
         
             <ul class="nav-links">
                 <li><a href="/public/html/blog.html"> Blog </a></li>
-                <li><a href="https://www.Google.com/"> About </a></li>
+                <li><a href="/public/html/about.html"> About </a></li>
                 <li><a href="/public/html/crud.html"> POST </a></li>
                 <li><a href="/public/html/resources.html"> Resources </a></li>
-                <li><a href="https://www.Google.com/"> Contact </a></li>
-                <li><a href="https://www.Google.com/"> Logout </a></li>
+                <li><a href="/public/html/contact.html"> Contact </a></li>
+                <li><a href="/public/html/login.html"> Logout </a></li>
             </ul>
             
             <div class="profile-img">
