add links to resource html

--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -40,7 +40,7 @@
 
           <div class="contact-section">
             <h1>Contact</h1>
-            <p>Each of our github pages here, including project repo github, our emails, fake number or real lol</p>
+            <p>Each of our github pages here, including project repo github, our emails, fake number or real lol..</p>
 
           </div>
 
