push quote to blog html page

--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -43,7 +43,7 @@
             <div class="card">
               <div class="card-body">
                 <blockquote class="blockquote mb-0 quote">
-                  <p>“Website without visitors is like a ship lost in the horizon.”</p>
+                  <p>“Website without visitors is like a ship lost in the horizon..”</p>
                   <footer class="blockquote-footer">Dr. Christopher Dayagdag <cite title="Source Title">Web Development Quotes</cite></footer>
                 </blockquote>
               </div>
