--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -58,10 +58,10 @@
             </div>
             <div class="footerNav">
                 <ul>
-                    <li><a href="https://www.Google.com/"> About </a></li>
-                    <li><a href="https://www.Google.com/"> Services </a></li>
+                    <li><a href="/public/html/about.html"> About </a></li>
+                    <li><a href="/public/html/blog.html"> Blog </a></li>
                     <li><a href="/public/html/resources.html"> Resources </a></li>
-                    <li><a href="https://www.Google.com/"> Contact </a></li>
+                    <li><a href="/public/html/contact.html"> Contact </a></li>
                     <li><a href=""> Our Team</a></li>
                 </ul>
             </div>
