--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -53,7 +53,7 @@
             <div class="footerNav">
                 <ul>
                     <li><a href="/public/html/about.html"> About </a></li>
-                    <li><a href=""> Services </a></li>
+                    <li><a href="/public/html/blog.html"> Blog </a></li>
                     <li><a href="/public/html/resources.html"> Resources </a></li> 
                     <li><a href="/public/html/contact.html"> Contact </a></li>
                     <li><a href="/public/html/teambio.html"> Our Team</a></li>
