--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -57,7 +57,7 @@
                     <li><a href="/public/html/blog.html"> Blog </a></li>
                     <li><a href="/public/html/resources.html"> Resources </a></li>
                     <li><a href="/public/html/contact.html"> Contact </a></li>
-                    <li><a href=""> Our Team</a></li>
+                    <li><a href="/public/html/teambio.html"> Our Team</a></li>
                 </ul>
             </div>
         </div>
