--- a/public/html/teambio.html
+++ b/public/html/teambio.html
@@ -40,7 +40,7 @@
 
           <div class="TeamMember-shortBio">
             <h1>Team short bios</h1>
-            <p>we can include a image of ourself and a two sentence or more description of each of us to add to this page.. </p>
+            <p>we can include a image of ourself and a two sentence or moreee description of each of us to add to this page.. </p>
 
           </div>
 
