add pre post template with javascript to open modal when user clicks the post, user will be able to comment, fist to five or dislike post in modal

--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -44,8 +44,28 @@
               <div class="card-body">
                 <blockquote class="blockquote mb-0 quote">
                   <p>“Website without visitors is like a ship lost in the horizon..”</p>
-                  <footer class="blockquote-footer">Dr. Christopher Dayagdag <cite title="Source Title">Web Development Quotes</cite></footer>
+                  <footer class="blockquote-footer quote2">Dr. Christopher Dayagdag <cite title="Source Title">Web Development Quotes</cite></footer>
                 </blockquote>
+              </div>
+            </div>
+          </div>
+          <br>
+          <!--template for blog card post below-->
+          <div class="card" style="width: 18rem;">
+            <img src="/public/images/pre-post1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">JavaScript</h5>
+              <p class="card-text">"I feel like we are missing the script tag in our HTML."</p>
+              <a href="#" class="btn btn-primary">See post</a>
+            </div>
+          </div>
+          <!--end of blog post car template -->
+          <div id="postmodal" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img id="postImage" src="" alt="">
+              <div id="postContent">
+                <!--post title and text will load here-->
               </div>
             </div>
           </div>
@@ -70,5 +90,6 @@
           <p>Copyright &copy;2023; Designed by <span class="designer">F2FSquad</span> <img src="/public/images/favicon1.png" alt="F2F fist to five logo" width="30" height="30" ></p>
       </div>
     </footer>
+    <script src="/public/js/blog.js"></script>
 </body>
 </html>
