--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>F2F BLOG</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="icon" type="image/x-icon" href="/public/images/favicon1.png"> <!--we can change color, leave feedback on favicon by url (blue hand at top)-->
     <link rel="stylesheet" type="text/css" href="/public/css/blog.css" /> 
-  <link rel="stylesheet" type="text/css" href="../css/blog.css" /> 
 
     </head>
     <body>
@@ -55,12 +55,15 @@
             <img src="/public/images/pre-post1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">JavaScript</h5>
+              <div class="profile-img">
+                <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
+            </div>
               <p class="card-text">"I feel like we are missing the script tag in our HTML."</p>
               <a href="#" class="btn btn-primary">See post</a>
             </div>
           </div>
           <!--end of blog post car template -->
-          <div id="postmodal" class="modal">
+          <div id="postModal" class="modal">
             <div class="modal-content">
               <span class="close">&times;</span>
               <img id="postImage" src="" alt="">
@@ -90,6 +93,8 @@
           <p>Copyright &copy;2023; Designed by <span class="designer">F2FSquad</span> <img src="/public/images/favicon1.png" alt="F2F fist to five logo" width="30" height="30" ></p>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="/public/js/blog.js"></script>
+
 </body>
 </html>
