updated resources input box to be centered

--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -47,46 +47,48 @@
   </div>
 
 
-  <form>
-
-    <div class="form row">
-      <label for="commentArea" class="col-sm-2 col-form-label">Comment: </label>
-      <div class="col-sm-10">
-        <textarea class="form-control" id="resCommentBox" placeholder="Add your comment here" rows="3"></textarea>
-      </div>
-    
-   
-
-      
-
-    <div class="resForm">
-    <label for="addUrl" class="col-sm-2 col-form-label">Add URL:</label>
-    <div class="col-sm-10">
-    <input type="text" class="form-control" id="urlLink" placeholder="Add a URL link here">
-    </div>
-
-
-
-    <div class="form-group">
-    <label for="exampleFormControlSelect1">Select a Tag Name:</label>
-    <select class="form-control" id="exampleFormControlSelect1">
-    <option>HTML</option>
-    <option>CSS</option>
-    <option>JAVASCRIPT</option>
-    <option>PYTHON</option>
-    <option>C and C++</option>
-    <option>JAVA</option>
-    </select>
-    </div>
-
   
-  <button type="Submit" class="btn btn-info">Submit</button>
+<form>
 
+<div class="form-group row">
+<label for="commentArea" class="col-sm-2 col-form-label">Comment: </label>
+<div class="col-sm-10">
+<textarea class="form-control" id="resCommentBox" placeholder="Add your comment here" rows="5"></textarea>
 </div>
+</div>
+
+<br/>
+
+
+<div class="form-group row">
+<label for="addUrl" class="col-sm-2 col-form-label">Add URL:</label>
+<div class="col-sm-10">
+<input type="text" class="form-control" id="urlLink" placeholder="Add a URL link here">
+</div>
+</div>
+
+<br/>
+
+<div class="form-group row">
+<label for="tagName" class="col-sm-2 col-form-label">Select a Tag Name:</label>
+<div class="col-sm-10">
+<select class="form-control" id="exampleFormControlSelect1">
+<option>HTML</option>
+<option>CSS</option>
+<option>JAVASCRIPT</option>
+<option>PYTHON</option>
+<option>C and C++</option>
+<option>JAVA</option>
+</select>
+</div>
+</div>
+
+<br/>
+
+<button type="Submit" class="btn btn-info">Submit</button>
+
+
 </form>
-
-
-
 </main>
 
 
