add three example template, which will be used for post as template in blog html

--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -50,6 +50,8 @@
             </div>
           </div>
           <br>
+
+          <div class="blog-post-area">
           <!--template for blog card post below-->
           <div class="card" style="width: 18rem;">
             <img src="/public/images/pre-post1.jpg" class="card-img-top" alt="...">
@@ -63,6 +65,32 @@
             </div>
           </div>
           <!--end of blog post car template -->
+          <!--pre-post templates(3)-->
+
+          <div class="card" style="width: 18rem;">
+            <img src="/public/images/pre-post1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">JavaScript</h5>
+              <div class="profile-img">
+                <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
+            </div>
+              <p class="card-text">"I feel like we are missing the script tag in our HTML."</p>
+              <a href="#" class="btn btn-primary">See post</a>
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem;">
+            <img src="/public/images/pre-post1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">JavaScript</h5>
+              <div class="profile-img">
+                <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
+            </div>
+              <p class="card-text">"I feel like we are missing the script tag in our HTML."</p>
+              <a href="#" class="btn btn-primary">See post</a>
+            </div>
+          </div>
+
           <div id="postModal" class="modal">
             <div class="modal-content">
               <span class="close">&times;</span>
@@ -72,6 +100,7 @@
               </div>
             </div>
           </div>
+      </div>
 <br>
         <footer>
           <div class="footer-container">
