--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -48,18 +48,18 @@
 
 
   
-<form>
-
+<form id="myForm">
+<!-- Comment Box -->
 <div class="form-group row">
 <label for="commentArea" class="col-sm-2 col-form-label">Comment: </label>
 <div class="col-sm-10">
-<textarea class="form-control" id="resCommentBox" placeholder="Add your comment here" rows="5"></textarea>
+<textarea class="form-control" id="commentBox" placeholder="Add your comment here" rows="5"></textarea>
 </div>
 </div>
 
 <br/>
 
-
+<!-- Url Link -->
 <div class="form-group row">
 <label for="addUrl" class="col-sm-2 col-form-label">Add URL:</label>
 <div class="col-sm-10">
@@ -69,10 +69,11 @@
 
 <br/>
 
+<!-- Tag ID -->
 <div class="form-group row">
 <label for="tagName" class="col-sm-2 col-form-label">Select a Tag Name:</label>
 <div class="col-sm-10">
-<select class="form-control" id="exampleFormControlSelect1">
+<select class="form-control" id="tagID">
 <option>HTML</option>
 <option>CSS</option>
 <option>JAVASCRIPT</option>
@@ -89,6 +90,9 @@
 
 
 </form>
+
+<div id="displayArea"></div>
+
 </main>
 
 
