--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="icon" type="image/x-icon" href="/public/images/favicon1.png"> <!--we can change color, leave feedback on favicon by url (blue hand at top)-->
-    <link rel="stylesheet" type="text/css" href="/public/css/blog.css" /> 
+    <link rel="icon" type="image/x-icon" href="../images/favicon1.png"> <!--we can change color, leave feedback on favicon by url (blue hand at top)-->
+    <link rel="stylesheet" type="text/css" href="../css/blog.css" /> 
 
     </head>
     <body>
@@ -22,12 +22,12 @@
               </a>
         
             <ul class="nav-links">
-                <li><a href="/public/html/blog.html"> Blog </a></li>
-                <li><a href="/public/html/crud.html"> POST </a></li>
-                <li><a href="/public/html/about.html"> About </a></li>
-                <li><a href="/public/html/resources.html"> Resources </a></li> 
-                <li><a href="/public/html/contact.html"> Contact </a></li>
-                <li><a href="/public/html/login.html"> Logout </a></li> <!--Login page-->
+                <li><a href="../blog.html"> Blog </a></li>
+                <li><a href="../crud.html"> POST </a></li>
+                <li><a href="../about.html"> About </a></li>
+                <li><a href="../resources.html"> Resources </a></li> 
+                <li><a href="../contact.html"> Contact </a></li>
+                <li><a href="../login.html"> Logout </a></li> <!--Login page-->
             </ul>
             
             <div class="profile-img">
@@ -54,7 +54,7 @@
           <div class="blog-post-area">
           <!--template for blog card post below-->
           <div class="card" style="width: 18rem;">
-            <img src="/public/images/pre-post1.jpg" class="card-img-top" alt="...">
+            <img src="../images/pre-post1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">JavaScript</h5>
               <div class="profile-img">
@@ -68,7 +68,7 @@
           <!--pre-post templates(3)-->
 
           <div class="card" style="width: 18rem;">
-            <img src="/public/images/pre-post1.jpg" class="card-img-top" alt="...">
+            <img src="../images/pre-post1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">JavaScript</h5>
               <div class="profile-img">
@@ -80,7 +80,7 @@
           </div>
 
           <div class="card" style="width: 18rem;">
-            <img src="/public/images/pre-post1.jpg" class="card-img-top" alt="...">
+            <img src="../images/pre-post1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">JavaScript</h5>
               <div class="profile-img">
@@ -110,11 +110,11 @@
             </div>
             <div class="footerNav">
                 <ul>
-                    <li><a href="/public/html/about.html"> About </a></li>
-                    <li><a href="/public/html/blog.html"> Blog </a></li>
-                    <li><a href="/public/html/resources.html"> Resources </a></li>
-                    <li><a href="/public/html/contact.html"> Contact </a></li>
-                    <li><a href="/public/html/teambio.html"> Our Team</a></li>
+                    <li><a href="../about.html"> About </a></li>
+                    <li><a href="../blog.html"> Blog </a></li>
+                    <li><a href="../resources.html"> Resources </a></li>
+                    <li><a href="../contact.html"> Contact </a></li>
+                    <li><a href="../teambio.html"> Our Team</a></li>
                 </ul>
             </div>
         </div>
@@ -123,7 +123,7 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="/public/js/blog.js"></script>
+    <script src="../js/blog.js"></script>
 
 </body>
 </html>
