--- a/public/html/crud.html
+++ b/public/html/crud.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="icon" type="image/x-icon" href="/public/images/favicon1.png"> <!--we can change color, leave feedback on favicon by url (blue hand at top)-->
+    <link rel="icon" type="image/x-icon" href="../images/favicon1.png"> <!--we can change color, leave feedback on favicon by url (blue hand at top)-->
     <link rel="stylesheet" type="text/css" href="../css/crud.css" />
 
 </head>
@@ -35,7 +35,7 @@
     </div>
     <div class="manage-category">
         <ul class="nav-links">
-            <li><a href="/public/html/blog.html"><i class="bi bi-house-fill"></i>Blog</a></li>
+            <li><a href="../html/blog.html"><i class="bi bi-house-fill"></i>Blog</a></li>
             <li><a href="https://www.Google.com/"><i class="bi bi-plus-square-fill"></i> Add post </a></li>
             <li><a href="https://www.Google.com/"><i class="bi bi-pencil-fill"></i> Edit post </a></li>
             <li><a href="https://www.Google.com/"><i class="bi bi-person-plus-fill"></i> Add user </a></li>
@@ -56,16 +56,16 @@
         </div>
         <div class="footerNav">
             <ul>
-                <li><a href="/public/html/about.html"> About </a></li>
-                <li><a href="/public/html/blog.html"> Blog </a></li>
-                <li><a href="/public/html/resources.html"> Resources </a></li> 
-                <li><a href="/public/html/contact.html"> Contact </a></li>
-                <li><a href="/public/html/teambio.html"> Our Team</a></li>
+                <li><a href="../about.html"> About </a></li>
+                <li><a href="../blog.html"> Blog </a></li>
+                <li><a href="../resources.html"> Resources </a></li> 
+                <li><a href="../contact.html"> Contact </a></li>
+                <li><a href="../teambio.html"> Our Team</a></li>
             </ul>
         </div>
     </div>
     <div class="footer-bottom">
-        <p>Copyright &copy;2023; Designed by <span class="designer">F2FSquad</span> <img src="/public/images/favicon1.png" alt="F2F fist to five logo" width="30" height="30" ></p>
+        <p>Copyright &copy;2023; Designed by <span class="designer">F2FSquad</span> <img src="../images/favicon1.png" alt="F2F fist to five logo" width="30" height="30" ></p>
     </div>
 </footer>
 </body>
