--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -119,7 +119,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-          <p>Copyright &copy;2023; Designed by <span class="designer">F2FSquad</span> <img src="/public/images/favicon1.png" alt="F2F fist to five logo" width="30" height="30" ></p>
+          <p>Copyright &copy;2023; Designed by <span class="designer">F2FSquad</span> <img src="../images/favicon1.png" alt="F2F fist to five logo" width="30" height="30" ></p>
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
