--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-          <p>Copyright &copy;2023; Designed by <span class="designer">F2FSquad</span> <img src="../favicon1.png" alt="F2F fist to five logo" width="30" height="30" ></p>
+          <p>Copyright &copy;2023; Designed by <span class="designer">F2FSquad</span> <img src="../images/favicon1.png" alt="F2F fist to five logo" width="30" height="30" ></p>
       </div>
     </footer>
 </body>
