add pre post to blog page and profile pics, template in javascript can be used for post creation modal

--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -58,7 +58,7 @@
             <div class="card-body">
               <h5 class="card-title">JavaScript</h5>
               <div class="profile-img">
-                <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
+                <img src="../images/pre-profile-pic1.jpg" alt="profile-pic" width="40" height="40">
             </div>
               <p class="card-text">"I feel like we are missing the script tag in our HTML."</p>
               <a href="#" class="btn btn-primary">See post</a>
@@ -68,36 +68,41 @@
           <!--pre-post templates(3)-->
 
           <div class="card" style="width: 18rem;">
-            <img src="../images/pre-post1.jpg" class="card-img-top" alt="...">
+            <img src="../images/pre-post3.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">JavaScript</h5>
               <div class="profile-img">
                 <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
             </div>
-              <p class="card-text">"I feel like we are missing the script tag in our HTML."</p>
-              <a href="#" class="btn btn-primary">See post</a>
+              <p class="card-text">"Is bootcamp worth it?" Enrolling Now UCF ONLINE
+                Coding, Register now!</p>
+                <a href="https://bootcamp.ce.ucf.edu/coding/">UCF Schedule</a>
+                <p>12/11/23: Full-Time (12 weeks)</p>
+                <p>10/10/23: Part-Time (24 weeks)</p> 
+                <p><a href="#" class="btn btn-primary">See post</a></p>
             </div>
           </div>
 
           <div class="card" style="width: 18rem;">
-            <img src="../images/pre-post1.jpg" class="card-img-top" alt="...">
+            <img src="../images/pre-post2.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">JavaScript</h5>
               <div class="profile-img">
-                <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
+                <img src="../images/pre-profile-pic2.jpeg" alt="profile-pic" width="40" height="40">
             </div>
-              <p class="card-text">"I feel like we are missing the script tag in our HTML."</p>
+              <p class="card-text">"I thought this would help anyone learning MYSQL and building their own database/api's!"</p>
               <a href="#" class="btn btn-primary">See post</a>
             </div>
           </div>
 
           <div id="postModal" class="modal">
             <div class="modal-content">
-              <span class="close">&times;</span>
               <img id="postImage" src="" alt="">
-              <div id="postContent">
-                <!--post title and text will load here-->
+                <div id="postContent">
+                  <!--post title and text will load here-->
               </div>
+              <img id="modalProfilePic" src="" alt="" width="40" height="40">
+              <button id="close">Close</button>
             </div>
           </div>
       </div>
