--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -94,7 +94,9 @@
               <a href="#" class="btn btn-primary">See post</a>
             </div>
           </div>
+          <!--End of pre-BLOGS-->
 
+          <!--Modal pop up when user click on blog posts-->
           <div id="postModal" class="modal">
             <div class="modal-content">
               <img id="postImage" src="" alt="">
@@ -106,6 +108,18 @@
             </div>
           </div>
       </div>
+      <!--ENd of Modal code-->
+<br>
+<br>
+      <div class="videos-container">
+        <div class="fetched-videos">
+          <h1>Tutorial Videos</h1>
+        </div>
+      
+
+      </div>
+
+
 <br>
         <footer>
           <div class="footer-container">
@@ -128,7 +142,8 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="../js/blog.js"></script>
+    <script src="../js/youtube.js"></script>
+   <script src="../js/blog.js"></script>
 
 </body>
 </html>
