--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="icon" type="image/x-icon" href="../images/favicon1.png"> <!--we can change color, leave feedback on favicon by url (blue hand at top)-->
-    <link rel="stylesheet" type="text/css" href="/../css/resources.css" />
+    <link rel="stylesheet" type="text/css" href="../css/resources.css" />
   
 </head>
 
