--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -42,8 +42,8 @@
 <main>
 
   <div class="resources-app">
-    <h1>Resources Page</h1>
-      <p>Valuable resources for programming help and knowledge!</p>
+    <h1>Resources</h1>
+      <p>Valuable resources for programming <b>help</b> and <b>knowledge</b>!</p>
   </div>
 
 
@@ -75,14 +75,14 @@
 <label for="tagName" class="col-sm-2 col-form-label">Tag Name:</label>
 <div class="col-sm-10">
 <select class="custom-select w-100 h-75" id="tagID" size="1">
-<option value="none">Select a Tag Name</option>
-<option value="html">HTML</option>
-<option value="css">CSS</option>
-<option value="javascript">JAVASCRIPT</option>
-<option value="python">PYTHON</option>
-<option value="c and c++">C and C++</option>
-<option value="c#">C#</option>
-<option value="java">JAVA</option>
+<option value="none" id="none">Select a Tag Name</option>
+<option value="html" id="html">HTML</option>
+<option value="css" id="css">CSS</option>
+<option value="javascript" id="javascript">JAVASCRIPT</option>
+<option value="python" id="python">PYTHON</option>
+<option value="c and c++" id="c">C and C++</option>
+<option value="c#" id="c#">C#</option>
+<option value="java" id="java">JAVA</option>
 </select>
 </div>
 </div>
