updated logo to link to home page

--- a/public/html/crud.html
+++ b/public/html/crud.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar bg-body-tertiary">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../blog.html">
                 <img src="../images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
             </a>
 
