add pre team pics in our team bio html page

--- a/public/html/teambio.html
+++ b/public/html/teambio.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="icon" type="image/x-icon" href="../images/favicon1.png"> <!--we can change color, leave feedback on favicon by url (blue hand at top)-->
     <link rel="stylesheet" type="text/css" href="../css/blog.css" /> 
-  <link rel="stylesheet" type="text/css" href="../css/blog.css" /> 
+  
 
     </head>
     <body>
@@ -39,31 +39,40 @@
           <br>
 
           <div class="TeamMember-shortBio">
-            <h1>Team short bios</h1>
-            <p>we can include a image of ourself and a two sentence or more description of each of us to add to this page.. </p>
-
+            <h1>Contributers</h1>
           </div>
 
-        <footer>
-          <div class="footer-container">
-            <div class="social">
-                <a href=""></a><i class="bi bi-youtube youtube"></i>
-                <a href=""></a><i class="bi bi-github github"></i>
-            </div>
-            <div class="footerNav">
-                <ul>
-                    <li><a href="../about.html"> About </a></li>
-                    <li><a href="../blog.html"> Blog </a></li>
-                    <li><a href="../resources.html"> Resources </a></li>
-                    <li><a href="../contact.html"> Contact </a></li>
-                    <li><a href="../teambio.html"> Our Team</a></li>
-                </ul>
-            </div>
+          <div class="about-developers clearfix">
+            <div class="developer-cards">
+              <img class="about-developers" src="../images/about-abigail.jpg" alt="a picture of Abigail">
+              <img class="about-developers" src="../images/about-katie.png" alt="a picture of Abigail">
+              <img class="about-developers" src="../images/about-Nathaniel.png" alt="a picture of Abigail">
+              <img class="about-developers" src="../images/about-yesenia.png" alt="a picture of Abigail">
+              <img class="about-developers" src="../images/about-joseph.png" alt="a picture of Abigail">
+          </div>
         </div>
-        <div class="footer-bottom">
-          <p>Copyright &copy;2023; Designed by <span class="designer">F2FSquad</span> <img src="../images/favicon1.png" alt="F2F fist to five logo" width="30" height="30" ></p>
-      </div>
-    </footer>
+
+<br>
+<footer>
+  <div class="footer-container">
+    <div class="social">
+        <a href=""></a><i class="bi bi-youtube youtube"></i>
+        <a href=""></a><i class="bi bi-github github"></i>
+    </div>
+    <div class="footerNav">
+        <ul>
+            <li><a href="../about.html"> About </a></li>
+            <li><a href="../blog.html"> Blog </a></li>
+            <li><a href="../resources.html"> Resources </a></li>
+            <li><a href="../contact.html"> Contact </a></li>
+            <li><a href="../teambio.html"> Our Team</a></li>
+        </ul>
+    </div>
+</div>
+<div class="footer-bottom">
+  <p>Copyright &copy;2023; Designed by <span class="designer">F2FSquad</span> <img src="../images/favicon1.png" alt="F2F fist to five logo" width="30" height="30" ></p>
+</div>
+</footer>
+        
 </body>
 </html>
-.
