--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="icon" type="image/x-icon" href="../images/favicon1.png"> <!--we can change color, leave feedback on favicon by url (blue hand at top)-->
     <link rel="stylesheet" type="text/css" href="../css/blog.css" /> 
-    <script defer src="../js/youtube.js"></script>
+    <script async src="../js/youtube.js"></script>
+    <script defer src="../js/blog.js"></script>
 
     </head>
     <body>
@@ -27,7 +28,7 @@
                 <li><a href="../about.html"> About </a></li>
                 <li><a href="../crud.html"> POST </a></li>
                 <li><a href="../resources.html"> Resources </a></li> 
-                <li><a href="../contact.html"> Contact </a></li>
+                <li><a href="../contact.html"> Contact us</a></li>
                 <li><a href="../login.html"> Logout </a></li> <!--Login page-->
             </ul>
             
@@ -146,7 +147,6 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="../js/blog.js"></script>
 
 </body>
 </html>
