--- a/public/html/stanley.html
+++ b/public/html/stanley.html
@@ -54,7 +54,7 @@
                     <li><a href="../about.html"> About </a></li>
                     <li><a href="../blog.html"> Blog </a></li>
                     <li><a href="../resources.html"> Resources </a></li> 
-                    <li><a href="../contact.html"> Contact </a></li>
+                    <li><a href="../contact.html"> Contact us </a></li>
                     <li><a href="../teambio.html"> Our Team</a></li>
                 </ul>
             </div>
