add style to paragraphs in team bio html

--- a/public/html/teambio.html
+++ b/public/html/teambio.html
@@ -17,7 +17,7 @@
 
 
 </head>
-
+<!--Names are mentioned in html to type your short bio or comment-->
 <body>
   <nav class="navbar bg-body-tertiary">
     <div class="container">
