add about app styling in css

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -39,9 +39,32 @@
           <br>
 
           <div class="about-app">
-            <h1>About page</h1>
-            <p>Details of app, Our mission statement...CODERS ARE STRESS FREE!</p>
+            <div class="hero">
+            <img src="../images/F2F BLOG Logo.png">
+            </div>
+            
+          </div>
+          <div class="stanley-code">
+            <div class="stanley-quote">
+            <h1>INPUT DO-WORK OUPUT<h1>
+            </div>
+          </div>
+          <div class="stanley-code">
+            <div class="stanley-quote">
+            <h3>What does F2F stand for?</h3>
+            <ul>
+              <li><span class="bolded"><u>F</u></span> is for <span class="bolded">Fist</span></li>
+              <li><span class="bolded"></u><u>2</u></span> is for <span class="bolded">To</span></li>
+              <li><span class="bolded"></u><u>F</u></span> is for <span class="bolded">Five</span></li>
+            </ul>
+            
+            <h3>What is the purpose of F2F Blog app?</h3>
+            <p>"Mauris nunc urna, dignissim ac dignissim ac, accumsan ac massa. Duis a dolor a purus tristique tempus.
+              Aenean dapibus justo vitae aliquet laoreet. Etiam porttitor viverra condimentum. Morbi elementum fringilla
+              diam, quis fringilla eros faucibus et."</p>
 
+
+            </div>
           </div>
 
         <footer>
