fix icon button links in footer

--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -47,8 +47,8 @@
         <footer>
           <div class="footer-container">
             <div class="social">
-                <a href=""></a><i class="bi bi-youtube youtube"></i>
-                <a href=""></a><i class="bi bi-github github"></i>
+                <a href=""><i class="bi bi-youtube youtube"></i></a>
+                <a href="https://github.com/newprice247/F2F-Blog"><i class="bi bi-github github"></i></a>
             </div>
             <div class="footerNav">
                 <ul>
