--- a/public/html/crud.html
+++ b/public/html/crud.html
@@ -34,15 +34,15 @@
         <h1>Welcome user name... </h1>
     </div>
     <div class="manage-category">
-        <ul class="nav-links">
-            <li><a href="../html/blog.html"><i class="bi bi-house-fill"></i>Blog</a></li>
-            <li><a href="https://www.Google.com/"><i class="bi bi-plus-square-fill"></i> Add post </a></li>
-            <li><a href="https://www.Google.com/"><i class="bi bi-pencil-fill"></i> Edit post </a></li>
-            <li><a href="https://www.Google.com/"><i class="bi bi-person-plus-fill"></i> Add user </a></li>
-            <li><a href="https://www.Google.com/"><i class="bi bi-clock-history"></i> Post history </a></li>
-            <li><a href=""><i class="bi bi-key"></i>Admin Login</a></li> <!--admin login page will prompt user and pass and javascript will show table of users etc.-->
-            <li><a href=""><i class="bi bi-door-closed"></i> Logout </a></li> <!--login page-->
-        </ul>
+        <div class="nav-links">
+            <button><i class="bi bi-house-fill"></i>Blog</button>
+            <button><i class="bi bi-plus-square-fill"></i> Add post </button>
+            <button><i class="bi bi-pencil-fill"></i> Edit post </button>
+            <button><i class="bi bi-person-plus-fill"></i> Add user </button>
+            <button><i class="bi bi-clock-history"></i> Post history </button>
+            <button><i class="bi bi-key-fill"></i>Admin Login</button> <!--admin login page will prompt user and pass and javascript will show table of users etc.-->
+            <button><i class="bi bi-door-closed"></i> Logout</button> <!--login page-->
+        </div>
         <div class="user-action">
             <!--this will be where content shows to CRUD-->
         </div>
