--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -61,9 +61,12 @@
               <h5 class="card-title">JavaScript</h5>
               <div class="profile-img">
                 <img src="../images/pre-profile-pic1.jpg" alt="profile-pic" width="40" height="40">
-            </div>
+                </div>
+                <div class="date-created">
+                  <p><i>John Doe posted</i> 5 September, 2023</p>
               <p class="card-text">"I feel like we are missing the script tag in our HTML."</p>
               <a href="#" class="btn btn-primary">See post</a>
+              </div>
             </div>
           </div>
           <!--end of blog post car template -->
@@ -75,13 +78,16 @@
               <h5 class="card-title">JavaScript</h5>
               <div class="profile-img">
                 <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
-            </div>
+                </div>
+                <div class="date-created">
+                  <p><i>Jane Doe posted</i> 10 October, 2023</p>
               <p class="card-text">"Is bootcamp worth it?" Enrolling Now UCF ONLINE
                 Coding, Register now!</p>
                 <a href="https://bootcamp.ce.ucf.edu/coding/">UCF Schedule</a>
                 <p>12/11/23: Full-Time (12 weeks)</p>
                 <p>10/10/23: Part-Time (24 weeks)</p> 
                 <p><a href="#" class="btn btn-primary">See post</a></p>
+            </div>
             </div>
           </div>
 
@@ -91,9 +97,14 @@
               <h5 class="card-title">JavaScript</h5>
               <div class="profile-img">
                 <img src="../images/pre-profile-pic2.jpeg" alt="profile-pic" width="40" height="40">
-            </div>
-              <p class="card-text">"I thought this would help anyone learning MYSQL and building their own database/api's!"</p>
+                </div>
+                <div class="date-created">
+                <p><i>Jack Doe posted</i> 1 October, 2023</p>
+                <p class="card-text">"I thought this would help anyone learning MYSQL and building their own database/api's!"</p>
+                
               <a href="#" class="btn btn-primary">See post</a>
+              </div>
+            
             </div>
           </div>
           <!--End of pre-BLOGS-->
