add nathan to teambio page, and got async youtube videos working

--- a/public/html/teambio.html
+++ b/public/html/teambio.html
@@ -66,10 +66,8 @@
       </div>
       <div class="developer-position">
         <div class="flex-container">
-          <img class="about-developers" src="../images/about-Nathaniel.png" alt="a picture of Abigail">
-          <p>"Mauris nunc urna, dignissim ac dignissim ac, accumsan ac massa. Duis a dolor a purus tristique tempus.
-            Aenean dapibus justo vitae aliquet laoreet. Etiam porttitor viverra condimentum. Morbi elementum fringilla
-            diam, quis fringilla eros faucibus et."</p>
+          <img class="about-developers" src="../images/about-Nathaniel.jpg" alt="a picture of Abigail">
+          <p>"Junior Web Dev specializing in the MERN Stack, currently enrolled in UCF's Full-Stack Coding Bootcamp"</p>
         </div>
       </div>
       <div class="developer-position">
