sorry on main again.... got the resources page GET resources working

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -27,7 +27,7 @@
 
         <div class="remember-forgot">
             <label><input type="checkbox"> Remember me</label>
-            <a href="#">Forgot passwprd</a>
+            <a href="#">Forgot password</a>
         </div>
         <button type="submit" class="btn">login</button>
         <div class="register-link">
