--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -121,6 +121,8 @@
 <p>Copyright &copy;2023; Designed by <span class="designer">F2FSquad</span> <img src="../images/favicon1.png" alt="F2F fist to five logo" width="30" height="30" ></p>
 </div>
 </footer>
+<script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+  crossorigin="anonymous"></script>
 <script src="../js/resources.js"></script>
 </body>
 </html>
