added more css and link to html

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -7,18 +7,26 @@
     <title>F2F login</title>
     <link rel="stylesheet" href="../css/login.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <
+    <link rel="icon" type="image/x-icon" href="/public/images/favicon1.png">
 </head>
 
-<body>
-
-    <div class="wrapper">
-        <form action="">
+<body> 
+    <nav class="navbar bg-body-tertiary">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+      <a href="/public/html/blog.html">
+        <img src="../images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
+     </a>
+      
+        <div class="wrapper"> 
+        <form action="public\html\crud.html">
          <h1>login</h1>
          <div class="input-box">
          <input type="text" placeholder="Username" 
            required>
            <i class='bx bxs-user'></i>
+          
+
         </div>
             <div class="input-box">
          <input type="password" placeholder="password" required>
@@ -29,7 +37,8 @@
             <label><input type="checkbox"> Remember me</label>
             <a href="#">Forgot passwprd</a>
         </div>
-        <button type="submit" class="btn">login</button>
+        <button type="submit" 
+        class="btn">login</button>
         <div class="register-link">
             <p>Don't have an account? <a href="#">Register</a></p>
         </div>
