add getContent to blog.js to get content from the database and append it to the page on load

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -7,32 +7,31 @@
     <title>F2F login</title>
     <link rel="stylesheet" href="../css/login.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    
+
 </head>
 
 <body>
 
     <div class="wrapper">
         <form action="">
-         <h1>login</h1>
-         <div class="input-box">
-         <input type="text" placeholder="Username" 
-           required>
-           <i class='bx bxs-user'></i>
-        </div>
+            <h1>login</h1>
             <div class="input-box">
-         <input type="password" placeholder="password" required>
-         <i class='bx bxs-lock-alt' ></i>
-        </div>
+                <input type="text" placeholder="Username" required>
+                <i class='bx bxs-user'></i>
+            </div>
+            <div class="input-box">
+                <input type="password" placeholder="password" required>
+                <i class='bx bxs-lock-alt'></i>
+            </div>
 
-        <div class="remember-forgot">
-            <label><input type="checkbox"> Remember me</label>
-            <a href="#">Forgot password</a>
-        </div>
-        <button type="submit" class="btn">login</button>
-        <div class="register-link">
-            <p>Don't have an account? <a href="#">Register</a></p>
-        </div>
+            <div class="remember-forgot">
+                <label><input type="checkbox"> Remember me</label>
+                <a href="#">Forgot password</a>
+            </div>
+            <button type="submit" class="btn">login</button>
+            <div class="register-link">
+                <p>Don't have an account? <a href="#">Register</a></p>
+            </div>
         </form>
     </div>
 </body>
