--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -1,128 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>F2F RESOURCES</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="icon" type="image/x-icon" href="../images/favicon1.png"> <!--we can change color, leave feedback on favicon by url (blue hand at top)-->
-    <link rel="stylesheet" type="text/css" href="../css/resources.css" />
-  
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>F2F RESOURCES</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <link rel="icon" type="image/x-icon" href="../images/favicon1.png">
+  <!--we can change color, leave feedback on favicon by url (blue hand at top)-->
+  <link rel="stylesheet" type="text/css" href="../css/resources.css" />
+
 </head>
 
 <body>
   <nav class="navbar bg-body-tertiary">
     <div class="container">
-    <a class="navbar-brand" href="../blog.html">
-      <img src="../images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
-    </a>
-        
-    <ul class="nav-links">
-      <li><a href="../blog.html"> Blog </a></li>
-      <li><a href="../about.html"> About </a></li>
-      <li><a href="../crud.html"> POST </a></li>
-      <li><a href="../resources.html"> Resources </a></li>
-      <li><a href="../contact.html"> Contact </a></li>
-      <li><a href="../login.html"> Logout </a></li>
-    </ul>
+      <a class="navbar-brand" href="../blog.html">
+        <img src="../images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
+      </a>
 
-  <div class="profile-img">
-    <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
-  </div>
+      <ul class="nav-links">
+        <li><a href="../blog.html"> Blog </a></li>
+        <li><a href="../about.html"> About </a></li>
+        <li><a href="../crud.html"> POST </a></li>
+        <li><a href="../resources.html"> Resources </a></li>
+        <li><a href="../contact.html"> Contact </a></li>
+        <li><a href="../login.html"> Logout </a></li>
+      </ul>
 
-</div>
-</nav>
+      <div class="profile-img">
+        <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
+      </div>
 
-<br>
+    </div>
+  </nav>
 
-<main>
+  <br>
 
-  <div class="resources-app">
-    <h1>Resources</h1>
+  <main>
+
+    <div class="resources-app">
+      <h1>Resources</h1>
       <p>Valuable resources for programming <b>help</b> and <b>knowledge</b>!</p>
-  </div>
-
-
-  
-<form id="myForm">
-  
-<!-- Comment Box -->
-<div class="form-group row">
-<label for="commentArea" class="col-sm-2 col-form-label">Comment: </label>
-<div class="col-sm-10">
-<textarea class="form-control" id="commentBox" placeholder="Add your comment here" rows="5"></textarea>
-</div>
-</div>
-
-<br/>
-
-<!-- Url Link -->
-<div class="form-group row">
-<label for="addUrl" class="col-sm-2 col-form-label">URL:</label>
-<div class="col-sm-10">
-<input type="text" class="form-control h-100" id="urlLink" placeholder="Add a URL link here">
-</div>
-</div>
-
-<br/>
-
-<!-- Tag ID -->
-<div class="form-group row">
-<label for="tagName" class="col-sm-2 col-form-label">Tag Name:</label>
-<div class="col-sm-10">
-<select class="custom-select w-100 h-75" id="tagID" size="1">
-<option value="none" id="none">Select a Tag Name</option>
-<option value="html" id="html">HTML</option>
-<option value="css" id="css">CSS</option>
-<option value="javascript" id="javascript">JAVASCRIPT</option>
-<option value="python" id="python">PYTHON</option>
-<option value="c and c++" id="c">C and C++</option>
-<option value="c#" id="c#">C#</option>
-<option value="java" id="java">JAVA</option>
-</select>
-</div>
-</div>
-
-<br/>
-
-<button type="Submit" class="btn btn-info">Submit</button>
-
-
-</form>
-
-<div id="displayArea"></div>
-
-</main>
+    </div>
 
 
 
-<footer>
-<div class="footer-container">
-<div class="social">
-<a href=""><i class="bi bi-youtube youtube"></i></a>
-<a href="https://github.com/newprice247/F2F-Blog"><i class="bi bi-github github"></i></a>
-</div>
-<div class="footerNav">
-<ul>
-<li><a href="../about.html"> About </a></li>
-<li><a href="../blog.html"> Blog </a></li>
-<li><a href="../resources.html"> Resources </a></li>
-<li><a href="../contact.html"> Contact us </a></li>
-<li><a href="../teambio.html"> Our Team</a></li>
-</ul>
-</div>
-</div>
+    <form id="myForm">
 
-<div class="footer-bottom">
-<p>Copyright &copy;2023; Designed by <span class="designer">F2FSquad</span> <img src="../images/favicon1.png" alt="F2F fist to five logo" width="30" height="30" ></p>
-</div>
-</footer>
-<script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
-  crossorigin="anonymous"></script>
-<script src="../js/resources.js"></script>
+      <!-- Comment Box -->
+      <div class="form-group row">
+        <label for="commentArea" class="col-sm-2 col-form-label">Comment: </label>
+        <div class="col-sm-10">
+          <textarea class="form-control" id="commentBox" placeholder="Add your comment here" rows="5"></textarea>
+        </div>
+      </div>
+
+      <br />
+
+      <!-- Url Link -->
+      <div class="form-group row">
+        <label for="addUrl" class="col-sm-2 col-form-label">URL:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control h-100" id="urlLink" placeholder="Add a URL link here">
+        </div>
+      </div>
+
+      <br />
+
+      <!-- Tag ID -->
+      <div class="form-group row">
+        <label for="tagName" class="col-sm-2 col-form-label">Tag Name:</label>
+        <div class="col-sm-10">
+          <select class="custom-select w-100 h-75" id="tagID" size="1">
+            <option value="none" id="none">Select a Tag Name</option>
+            <option value="html" id="html">HTML</option>
+            <option value="css" id="css">CSS</option>
+            <option value="javascript" id="javascript">JAVASCRIPT</option>
+            <option value="python" id="python">PYTHON</option>
+            <option value="c and c++" id="c">C and C++</option>
+            <option value="c#" id="c#">C#</option>
+            <option value="java" id="java">JAVA</option>
+          </select>
+        </div>
+      </div>
+
+      <br />
+
+      <button type="Submit" class="btn btn-info">Submit</button>
+
+
+    </form>
+
+    <div id="displayArea"></div>
+
+  </main>
+
+
+
+  <footer>
+    <div class="footer-container">
+      <div class="social">
+        <a href=""><i class="bi bi-youtube youtube"></i></a>
+        <a href="https://github.com/newprice247/F2F-Blog"><i class="bi bi-github github"></i></a>
+      </div>
+      <div class="footerNav">
+        <ul>
+          <li><a href="../about.html"> About </a></li>
+          <li><a href="../blog.html"> Blog </a></li>
+          <li><a href="../resources.html"> Resources </a></li>
+          <li><a href="../contact.html"> Contact us </a></li>
+          <li><a href="../teambio.html"> Our Team</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <p>Copyright &copy;2023; Designed by <span class="designer">F2FSquad</span> <img src="../images/favicon1.png"
+          alt="F2F fist to five logo" width="30" height="30"></p>
+    </div>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+    crossorigin="anonymous"></script>
+  <script src="../js/resources.js"></script>
 </body>
+
 </html>
