removed extra username box

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -22,9 +22,6 @@
         <form action="..\crud.html">
          <h1>login</h1>
          <div class="input-box">
-         <input type="text" placeholder="Username" 
-           required>
-           <i class='bx bxs-user'></i>
           
 
         </div>
@@ -39,7 +36,7 @@
 
         <div class="remember-forgot">
             <label><input type="checkbox"> Remember me</label>
-            <a href="#">Forgot passwprd</a>
+            <a href="#">Forgot password</a>
         </div>
         <button type="submit" 
         class="btn">login</button>
